syntax = "proto3";

option java_package = "com.luxoft.uhg.fabric.proto";
option go_package = "main";
option java_outer_classname = "InsuredRegistry";

package main;


message Member {
    string Id = 1;
    map<int32, string> channelIds = 2;
}

message MemberList {
    repeated Member members = 1;
}

message GetChannel {
    string memberId = 1;
    int32 planYear = 2;
}

message ChannelId {
    string id = 1;
}

message Init {
    string cert = 1;
}

